src/test/ui/rfc-2126-extern-absolute-paths/non-existent-1.stderr
error[E0463]: can't find crate for `xcrate`
  --> $DIR/non-existent-1.rs:13:5
   |
LL | use xcrate::S; //~ ERROR can't find crate for `xcrate`
   |     ^^^^^^ can't find crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
