src/test/ui/rfc-2126-extern-absolute-paths/non-existent-1.rs
// edition:2018

use xcrate::S; //~ ERROR can't find crate for `xcrate`

fn main() {}
